update intro.jsx and intro.css

--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -1,4 +1,3 @@
-/* CSS Variables for easy theme management */
 :root {
     --lightest-slate: #F5F5F5;
     /* I assumed some colors, replace with your own */
@@ -15,7 +14,11 @@
     min-height: 100vh;
 }
 
-
+.lottie-animation {
+    margin-bottom: 20px;
+    width: 20vw;
+    height: 20vw;
+}
 
 .intro-container {
     padding: 15px;
@@ -34,3 +37,38 @@
 }
 
 
+@media only screen and (max-width: 788px) {
+    .lottie-animation {
+        width: 40vw;
+        height: 40vw;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    #intro {
+        /* min-height: unset; */
+        padding-left: unset;
+        margin: 0;
+        align-items: center;
+    }
+
+    .lottie-animation {
+        width: 15vw;
+        height: 15vw;
+    }
+
+    .intro-container {
+        display: flex;
+        flex-direction: column;
+        font-size: 40px;
+    }
+
+    .ut-dialogue {
+        font-size: 40px;
+    }
+
+    .intro-name {
+        font-size: 40px;
+    }
+}
