update on styles, added sidebar nav and projects

--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,76 +1,9 @@
-#toolkit {
+#experience {
     padding-left: 15%;
     padding-right: 25%;
     min-height: 60vh;
     padding-top: 10%;
-    padding-bottom: 10%;
-}
-
-
-/* hover should make logos bigger */
-.logo-hover-effect {
-    transition: transform 0.3s; /* smooth transition */
-}
-
-.logo-hover-effect:hover {
-    transform: scale(1.1); /* scale the logo up by 10% when hovered */
-}
-
-
-/*! Toolkit.css */
-
-
-/* li {
-    position: relative;
-    width: 20%;
     padding-bottom: 20%;
-    height: 0;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0px 20px 20px 10px rgba(var(--RGB_box-shadow), 0.1);
-} */
-
-
-
-li {
-    border-radius: 20px;
-    overflow: hidden;
-    padding: 1%;
-    /* box-shadow: 0px 20px 20px 10px rgb(155, 132, 132); */
-    margin-bottom: 20px;
-}
-
- /* #JsLogo {
-    border-radius: 100px;
-} 
-
-#TsLogo {
-    background: #3178c6;
-}
-
-#ReactLogo {
-    background: #222;
-} */
-
-
-
-
-.skillSection-list ul {
-    display: flex;
-    justify-content: space-around;
-    /* Adjust this value to bring icons closer or further apart */
-    margin: auto;
-    /* This will center the ul if its width is less than its container's width */
-}
-
-
-.skillSection-list li {
-    list-style: none;
-}
-
-.skillSection-list svg {
-    width: 100px;
-    height: 100px;
 }
 
 .joblist-job-title {
@@ -167,12 +100,10 @@ ul {
     font-weight: bold;
 }
 
-   
 @media only screen and (max-width: 600px) {
-    #toolkit {
-        /* padding-left: unset;
-        padding-right: unset; */
-        /* display: none; */
+    #experience {
+        padding-left: unset;
+        padding-right: unset;
     }
 
     .jss1 {
@@ -193,14 +124,4 @@ ul {
     .joblist-job-company {
         font-size: 22px;
     }
-
-
-            .skillSection-top-row li svg,
-        .skillSection-bottom-row li svg {
-            width: 100%;
-            height: 100%;
-        }
-    
-        
 }
-
