--- a/src/styles/Toolkit.css
+++ b/src/styles/Toolkit.css
@@ -52,9 +52,6 @@ li {
     background: #222;
 } */
 
-
-
-
 .skillSection-list ul {
     display: flex;
     justify-content: space-around;
@@ -194,13 +191,20 @@ ul {
         font-size: 22px;
     }
 
-
             .skillSection-top-row li svg,
         .skillSection-bottom-row li svg {
             width: 100%;
             height: 100%;
         }
     
-        
+        .skillSection-list li {
+            width: 80px; /* Adjust the size for mobile */
+            height: 80px;
+        }
+    
+        .skillSection-list svg {
+            width: 70%; /* Make SVGs smaller on mobile */
+            height: 70%;
+        }
 }
 
