cleaned up some comments

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -115,6 +115,12 @@
     .about-para-2 {
         margin-top: 40px;
     }
-}
+    
+    .section-header {
+        font-size: 30px;
+    }
 
-/* Hover effect */
+    .section-right{
+        font-size: 0px;
+    }
+}
