--- a/src/styles/SidebarNav.css
+++ b/src/styles/SidebarNav.css
@@ -35,13 +35,15 @@
     margin-right: 2px;
 }
 
+.sidebar-nav a:hover {
+    text-decoration: none; /* Ensures underline is still removed */
+}
+
 /* Mobile view adjustments */
 @media only screen and (max-width: 600px) {
     .sidebar-nav {
         display: none;
         /* Hide the entire sidebar navigation on mobile */
     }
-
-
 }
 
