--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -1,3 +1,4 @@
+
 /* CSS Variables for easy theme management */
 :root {
     --lightest-slate: #F5F5F5;
@@ -21,6 +22,7 @@
 .lottie-container {
     width: 100%;
     max-width: 300px;
+    max-height: 300px
 }
 
 .lottie-animation {
